--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Deep0807.github.io/mywebsite",
+  "homepage": "http://Deep0807.github.io/",
   "name": "webmain",
   "version": "0.1.0",
   "private": true,
